# ChatTTS

./: .flake8  .gitattributes  .gitignore  Dockerfile  Installation.md  LICENSE  Makefile  README.md  README_CN.md  README_JP.md  README_RU.md  README_new.md  README_official.md  api.md  api.py  client.py  cmd.py  colab_demo.ipynb  env.yaml  eval_autoencoder.py  eval_gpt.py  example.ipynb  finetune.py  infer.ipynb  infer_autoencoder.py  infer_gpt.py  openai_api.ipynb  pyproject.toml  requirements-api-ui.txt  requirements-chat-tts.txt  requirements.txt  setup.py  sha256.env  test.py  validate.py  webui.py  webui_api.py
.github/workflows/: checksum.yml  close-issue.yml  pull-format.yml  push-format.yml  unitest.yml  upload-pypi.yml
ChatTTS/: __init__.py  core.py  norm.py
ChatTTS/config/: __init__.py  config.py
ChatTTS/experimental/: llm.py
ChatTTS/infer/: api.py
ChatTTS/model/: __init__.py  dvae.py  embed.py  gpt.py  processors.py  speaker.py  tokenizer.py
ChatTTS/res/: homophones_map.json  sha256_map.json
ChatTTS/train/: dataset.py  model.py  utils.py
chattts-tf/: CONTRIBUTING.md  LICENSE  convert_to_tflite.py  requirements.txt
docs/cn/: README.md
dummy_data/: data.json
examples/: save_local_wave.py
onnx_export/: README.md  trace_gpt.py  trace_others.py
speaker_consistency/: README.en.md  README.md  audio_generator.py  consistency_evaluator.py  requirements.txt  test_data.yaml
tests/: #511.py  #521.py  #588.py  #655.py  #776.py  testall.sh
utils/: dataset.py  encoder.py  logger.py  model.py  output.py  text_split_method.py  train.py  wavenet.py
(+120 files in other folders)
