[tool.poetry]
name = "ChatTTS"
version = "0.1.0"
description = "ChatTTS is a generative speech model for daily dialogue."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "ChatTTS", from = "." },
]

[tool.poetry.dependencies]
python = ">=3.10.*"
torch = "^2.3.0"
omegaconf = "^2.3.0"
tqdm = "^4.66.4"
einops = "^0.8.0"
vector-quantize-pytorch = "^1.14.24"
transformers = "^4.41.2"
vocos = "^0.1.0"
pynini = "2.1.5"

[tool.poetry.group.dev.dependencies]
ipython = "^8.25.0"
ipykernel = "^6.29.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
